--- a/css/c.css
+++ b/css/c.css
@@ -1,3 +1,27 @@
 body{
     background-color: aqua;
 }
+.navbar
+{
+    background-color: black;
+}
+.nav-link
+.navbar-brand
+{
+    color:#fff;
+    cursor:pointer;
+}
+.nav-link
+{
+    margin-right:em !important;
+}
+.nav-link:hover
+{
+    color:red;
+}
+.navbar-collapse{
+    justify-content: flex-end;
+}
+.navbar span{
+    color:red;
+}
